# borin

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/borin/: raspored.h  raspored.h~
src/: borin_utf8_cyr.cpp  borin_utf8_lat.cpp  utf8_borin.cpp
tests/: borin_raspored.t.cpp
